# internal/models/post.go
@@ -1,6 +1,9 @@
 package models
 
 import (
+	"errors"
+	"fmt"
+	"strings"
 	"time"
 )
 
@@ -15,6 +18,20 @@ const (
 	PostStatusInactive PostStatus = "inactive"
 	PostStatusDeleted  PostStatus = "deleted"
 )
+
+var validListingType = map[ListingType]struct{}{
+	ListingTypeGive: {},
+	ListingTypeSale: {},
+}
+
+func (lt ListingType) Normalize() ListingType {
+	return ListingType(strings.ToLower(string(lt)))
+}
+
+func (lt ListingType) IsValid() bool {
+	_, ok := validListingType[lt]
+	return ok
+}
 
 type Money struct {
 	Amount   int64  `json:"amount"`
@@ -35,7 +52,7 @@ type Post struct {
 	UpdatedAt   time.Time   `json:"updated_at"`
 }
 
-type PostInput struct {
+type CreatePostInput struct {
 	UserID      int
 	AnimalID    int
 	ListingType ListingType
@@ -43,4 +60,32 @@ type PostInput struct {
 	Reason      *string
 	PhotoURLs   []string
 	ContactInfo string
+}
+
+func (cpi *CreatePostInput) Validate() error {
+	cpi.ListingType = cpi.ListingType.Normalize()
+	validationErrors := make(map[string]string)
+
+	if cpi.AnimalID == 0 {
+		validationErrors["Animal ID"] = "Animal ID is required, connot be 0"
+	}
+	if cpi.ListingType == "" {
+		validationErrors["Listing Type"] = "Listing type cannot be empty. For sale or give, only!"
+	} else if !cpi.ListingType.IsValid() {
+		validationErrors["Listing Type"] = fmt.Sprintf("invalid type: %s", cpi.ListingType)
+	}
+	if cpi.ContactInfo == "" {
+		validationErrors["Contact Info"] = "Contact info is required"
+	}
+	if cpi.ListingType == ListingTypeSale && cpi.Price == nil {
+		validationErrors["Price"] = "Price is required if Listing Type for sale"
+	}
+	if len(validationErrors) > 0 {
+		msgs := make([]string, 0, len(validationErrors))
+		for field, msg := range validationErrors {
+			msgs = append(msgs, field+": "+msg)
+		}
+		return errors.New(strings.Join(msgs, ", "))
+	}
+	return nil
 }
